@@ -2,6 +2,7 @@ This file documents the revision history for the Devel::Module::Trace module
 
 0.03     coming soon
           - fix deep recursion when loaded twice
+          - fix problem with modules not returning from require
 
 0.02     Fri May  1 12:07:50 CEST 2015
           - add result web app to display statistics and results
